# fcrypt

./: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  vcpkg.json
include/: cli.h  cli_args.h  file_process.h  logger.h  util.h  version.h
include/cli/: cli.h  cli_args.h  cli_hide.h
include/crypt/: crypt.h  file_format.h
include/gui/: gui_main.h
installer/: .gitignore  installer.iss
src/: cli.c  cli_args.c  cli_hide.c  file_process.c  logger.c  main.c  util.c
src/cli/: cli.c  cli_args.c  cli_hide.c
src/crypt/: README.md  crypt.c  file_format.c
src/gui/: gui_main.cpp
